--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "ver": "npm version prerelease --preid alpha"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "typedoc-plugin-missing-exports": "^3.0.0"
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
@@ -41,7 +40,8 @@
     "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "typedoc-plugin-missing-exports": "^3.0.0"
   },
   "cspell": {
     "ignorePaths": [
