--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "!dist/examples"
   ],
   "scripts": {
     "test": "jest",
