--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "CommonJS",
     "ESM"
   ],
-  "version": "1.0.3",
+  "version": "1.0.4-alpha.0",
   "author": {
     "email": "product@jammber.com",
     "name": "mozaic.io",
