--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "doc": "typedoc",
     "copy": "copyfiles README.md LICENSE.md dist/",
     "gen": "openapi-generator-cli generate -i https://api.sandbox.mozaic.io/swagger/v1/swagger.json -g typescript-axios -o ./src/api -t ./custom-templates",
-    "ver": "npm version prerelease --preid alpha",
+    "ver-alpha": "npm version prerelease --preid alpha",
+    "ver": "npm version",
     "publish": "npm publish --access public"
   },
   "dependencies": {
