--- a/examples/payment-cycles/package.json
+++ b/examples/payment-cycles/package.json
@@ -14,7 +14,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
-    "@mozaic-io/mozaic-sdk-node": "^1.0.2-alpha.5",
+    "@mozaic-io/mozaic-sdk-node": "^1.0.5",
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
     "typescript": "^5.6.3"
