adding codecov upload

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Unit Tests
 
 on:
   push:
@@ -25,3 +25,7 @@ jobs:
         with:
           name: test-results
           path: coverage/ # Or the folder where Jest outputs coverage reports
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+            token: ${{ secrets.CODECOV_TOKEN }}
