--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,14 +19,23 @@ jobs:
       - name: Install Dependencies
         run: npm install  # Or yarn install if you use Yarn
       - name: Run Tests
-        run: npm test  # Or yarn test if you use Yarn
+        #run: npm test  # Or yarn test if you use Yarn
+        run: JEST_JUNIT_CLASSNAME="{filepath}" npm test
+
       - name: Upload test results
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: coverage/ # Or the folder where Jest outputs coverage reports
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
             token: ${{ secrets.CODECOV_TOKEN }}
             slug: mozaic-io/sdk-node
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+            token: ${{ secrets.CODECOV_TOKEN }}
