--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^22.9.0",
     "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "typedoc-plugin-missing-exports": "^3.0.0"
